# EdgeChains

./: .gitignore  Cargo.toml  Makefile  README.md  package.json
.github/workflows/: pr-build.yml  release-wasm.yml
JS/edgechains/: README.md  package.json
JS/edgechains/arakoodev/: arakoodev-1.0.7.tgz  jest.config.cjs  package.json  shyamraghuonec-test-1.0.12.tgz  tsconfig.json
JS/edgechains/arakooserver/: esbuild.build.js  index.js  index.ts  jest.config.cjs  package.json  tsconfig.json
JS/edgechains/db/: index.js  index.ts  package.json  tsconfig.json
JS/edgechains/document-loader/: esbuild.build.js  index.d.ts  index.js  index.ts  package.json  tsconfig.json
JS/edgechains/document-loader/src/: index.ts
JS/edgechains/examples/Test01/: package.json
JS/edgechains/examples/chat-with-llm/: package.json  readme.md  replacedirnameloader.cjs  replaceloader.cjs  tsconfig.json
JS/edgechains/examples/chat-with-pdf/: esbuild.build.js  package.json  readme.md  tsconfig.json  vitest.config.ts
JS/edgechains/examples/getWeather-or-time-function-calling/: package.json  readme.md  tsconfig.json
JS/edgechains/examples/language-translater/: package.json  readme.md  tsconfig.json
JS/edgechains/examples/react-chain/: package.json  readme.md  tsconfig.json  vitest.config.ts  webpack.config.cjs
JS/edgechains/examples/research-agent/: package.json  readme.md
JS/edgechains/examples/resume-reviewer/: .env  README.md  package.json  readme.md  tsconfig.json
JS/edgechains/examples/summarize-page/: package.json  readme.md  tsconfig.json
JS/edgechains/examples/wikiExample/: package.json
JS/edgechains/lib/: index.d.ts  index.js  index.ts  package.json  tsconfig.json
JS/edgechains/lib/create-edgechains/: index.js  index.ts  tsconfig.json
JS/edgechains/middleware/: index.js  index.ts  package.json
JS/edgechains/openai/: index.ts  package.json  tsconfig.json
JS/edgechains/openai/src/: index.ts
JS/edgechains/splitter/: index.d.ts  index.js  index.ts  package.json  tsconfig.json
JS/edgechains/splitter/src/: index.ts
JS/edgechains/vector-db/: index.d.ts  index.js  index.ts  package.json  tsconfig.json
JS/jsonnet/: .gitignore  Cargo.toml  README.md  build.sh  package.json  read-file.js
JS/jsonnet/src/: context.rs  index.d.ts  index.js  index.mjs  jsonnet.js  jsonnet_wasm.d.ts  jsonnet_wasm.js  jsonnet_wasm_bg.js  jsonnet_wasm_bg.wasm  jsonnet_wasm_bg.wasm.d.ts  lib.rs
JS/jsonnet/test/: funcs.js  package.json  test.js  test.jsonnet  test.ts  tsconfig.json
JS/wasm/benchmark/: index.js  package.json
JS/wasm/crates/apis/: Cargo.toml
JS/wasm/crates/arakoo-core/: Cargo.toml
JS/wasm/crates/arakoo-core/src/: execution.rs  lib.rs  runtime.rs
JS/wasm/crates/arakoo-core/src/apis/: api_config.rs  mod.rs  runtime_ext.rs  types.rs
JS/wasm/crates/arakoo-core/src/apis/axios/: mod.rs
JS/wasm/crates/arakoo-core/src/apis/axios/axios/: index.js  package.json  webpack.config.cjs
JS/wasm/crates/arakoo-core/src/apis/console/: config.rs  index.js  mod.rs
JS/wasm/crates/arakoo-core/src/apis/fetch/: mod.rs  outbound_http.rs
JS/wasm/crates/arakoo-core/src/apis/http/: mod.rs
JS/wasm/crates/arakoo-core/src/apis/http/shims/: index.js  package.json
JS/wasm/crates/arakoo-core/src/apis/jsonnet/: mod.rs
JS/wasm/crates/arakoo-core/src/apis/pdfparse/: mod.rs
JS/wasm/crates/arakoo-core/src/apis/random/: mod.rs
JS/wasm/crates/arakoo-core/src/apis/stream_io/: mod.rs
JS/wasm/crates/arakoo-core/src/apis/text_encoding/: mod.rs
JS/wasm/crates/cli/: Cargo.toml  build.rs
JS/wasm/crates/cli/src/: main.rs
JS/wasm/crates/serve/: Cargo.toml
JS/wasm/examples/axios/: build.js  package.json  wasi_snapshot_preview1.reactor.wasm
JS/wasm/examples/ec-wasmjs-hono/: build.js  package.json  webpack.config.cjs
JS/wasm/examples/hono-fetch/: build.js  package.json
JS/wasm/examples/hono-openai/: build.js  package.json
JS/wasm/examples/hono-pdf/: build.js  (+1 more)
JS/wasm/sync-rpc/: find-port.js  index.js  json.js  package.json  worker.js
JS/wasm/wit/: arakoo.wit  http-types.wit  inbound-http.wit  jsonnet.wit  utils.wit
(+173 files in other folders)
