[workspace]
members = [
  "JS/wasm/crates/arakoo-core",
  "JS/wasm/crates/cli",
  "JS/wasm/crates/serve",
  "JS/jsonnet",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
wizer = "6.0.0"
wasmtime = { features = ["async"], version = "19" }
wasmtime-wasi = "19"
javy = { version = "2.1.0" }
anyhow = "1.0.79"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
http = "1.1.0"
reqwest = { version = "0.12.4", features = [
    "blocking","json"
] }

[profile.release]
lto = true
opt-level = 's'

[profile.dev]
incremental = true
