[package]
name = "arakoo-jsonnet"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
jrsonnet-evaluator = { version = "0.5.0-pre95" }
jrsonnet-parser = { version = "0.5.0-pre95" }
jrsonnet-stdlib = { version = "0.5.0-pre95" }
jrsonnet-gcmodule = { version = "0.3.6" }
serde = "1.0.195"
serde_json = "1.0.111"
wasm-bindgen-file-reader = "1"
regex = "1.10.3"
js-sys = "0.3.69"
wasm-bindgen-futures = "0.4.42"
tokio = {version= "1.37.0",features = ["rt"]}
async-std = "1.12.0"
futures = {version = "0.3.30", features = ["executor"]}
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
