[package]
name = "arakoo-js-engine"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true, features = ["export_alloc_fns", "json"] }
once_cell = { workspace = true }
apis = { path = "../apis", features = [
    "console",
    "text_encoding",
    "random",
    "stream_io",
] }
serde_json = { workspace = true }
wit-bindgen = "0.24.0"