[package]
name = "arakoo-js-engine"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
javy = { workspace = true, features = ["export_alloc_fns", "json"] }
once_cell = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
send_wrapper = "0.6.0"
wit-bindgen = "0.24.0"
# fastrand = { version = "2.0.1", optional = true }
# wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0" }
tokio = "1.36.0"
http = { workspace = true }
quickjs-wasm-rs = "3.0.0"
bytes = { version = "1.6.0", features = ["serde"] }
fastrand = "2.1.0"
log = {version = "*"}
env_logger = {version = "*"}
arakoo-jsonnet ={ path = "../../../jsonnet"}
jrsonnet-gcmodule = { version = "0.3.6" }
jrsonnet-evaluator = { version = "0.5.0-pre95" }
